# bsides-vancouver-badge

./: .gitignore  CHANGELOG.md  CHANGES-v1-to-v2.md  CMakeLists.txt  LICENSE  README.md  sdkconfig.defaults
components/FastLED/: .component_hash
components/NFC_RFAL/: .component_hash  CMakeLists.txt
components/NFC_RFAL/src/: ndef_class.h
components/ST25R3911B/: .component_hash  CMakeLists.txt
components/espressif__arduino-esp32/variants/esp32c3/: pins_arduino.h
docs/: BUILDING.md  HARDWARE.md  NFC_TAGS.md  SOFTWARE.md  WORKSHOP.md
docs/slides/: software-workshop.pptx
main/: CMakeLists.txt  badge_state.cpp  badge_state.h  idf_component.yml  main.cpp  ndef_custom_config.h  project_pins.h  rfal_custom_config.h  wifi_portal.cpp  wifi_portal.h
prebuilt/: README.md
prebuilt/2025-production/: 2025_bsides_badge_flasher.sh
starter-template/: CMakeLists.txt  README.md
starter-template/main/: CMakeLists.txt  main.cpp
